Bug 484726 - Blur Noise moves wrong direction when window is moved
Summary: Blur Noise moves wrong direction when window is moved
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: 6.2.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-29 19:45 UTC by duncanyoyo1
Modified: 2025-08-14 15:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
Video showing noise moving in the wrong direction relative to window movement (1.92 MB, video/mp4)
2024-03-29 19:47 UTC, duncanyoyo1
Details
Video showing the previous behavior (3.59 MB, video/mp4)
2024-04-01 17:08 UTC, duncanyoyo1
Details

Note You need to log in before you can comment on or make changes to this bug.
Description duncanyoyo1 2024-03-29 19:45:17 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY


STEPS TO REPRODUCE
1. Enable blur and noise
2. Increase noise till it's clearly visible
3. Move window around

OBSERVED RESULT
The noise moves in the opposite direction relative to the direction the window is moved.

EXPECTED RESULT
It to remain static like it did previously. Meaning before it seemed like it was as if there was a large noise image composited over the entire desktop and that was superimposed over the blur regions. Meaning when you moved a window the noise would move but only relative to the window, not to the desktop itself.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 6.0.2
(available in About System)
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
Running X11 on an Nvidia card
Comment 1 duncanyoyo1 2024-03-29 19:47:27 UTC
Created attachment 167925 [details]
Video showing noise moving in the wrong direction relative to window movement
Comment 2 duncanyoyo1 2024-04-01 17:08:49 UTC
Created attachment 168027 [details]
Video showing the previous behavior

Managed to find an old video from some time back in 5.XX showing how the noise behaved.
Excuse the compression, had to get it under 4000KB
Comment 3 duncanyoyo1 2024-09-26 02:35:54 UTC
I understand that the team is busy, but I wanted to check if there have been any updates or if additional information is needed from my side to help resolve this issue.
Comment 4 duncanyoyo1 2025-02-17 14:22:41 UTC
Still having this issue in KDE Plasma 6.2.5

And the really weird part is the noise only moves left/right. Never up/down. When I drag the window to the left, the noise moves very fast to the right ( about 2x the speed that I am moving the window at )

Really this noise should be fixed in position and the window should move "over" it.
Comment 5 Zamundaaa 2025-08-12 12:29:15 UTC
Git commit 202c9093e6b390ecb7bf36892c6155ff8c748a0b by Xaver Hugl, on behalf of Marcin Woźniak.
Committed on 12/08/2025 at 10:53.
Pushed by zamundaaa into branch 'master'.

plugins/blur: make the noise texture no longer move with the window

This prevents the noise texture from moving when the window geometry changes.

M  +0    -2    src/plugins/blur/blur.cpp
M  +0    -1    src/plugins/blur/blur.h
M  +1    -2    src/plugins/blur/shaders/noise.frag
M  +1    -2    src/plugins/blur/shaders/noise_core.frag

https://invent.kde.org/plasma/kwin/-/commit/202c9093e6b390ecb7bf36892c6155ff8c748a0b