plugins/blur: make the noise texture no longer move with the window

This prevents the noise texture from moving when the window geometry changes.

BUG: 484726