src/plugins/blur/shaders/noise_core.frag
@@ -2,7 +2,6 @@
 
 uniform sampler2D texUnit;
 uniform vec2 noiseTextureSize;
-uniform vec2 texStartPos;
 
 in vec2 uv;
 
@@ -10,7 +9,7 @@ out vec4 fragColor;
 
 void main(void)
 {
-    vec2 uvNoise = vec2((texStartPos.xy + gl_FragCoord.xy) / noiseTextureSize);
+    vec2 uvNoise = vec2(gl_FragCoord.xy / noiseTextureSize);
 
     fragColor = vec4(texture(texUnit, uvNoise).rrr, 0);
 }
